# podman-mcp

./: README.md  pyproject.toml
src/podman_mcp/: handlers.py  podman_executor.py  server.py
